add:添加多实例会签通过方式，比例制，一票否决，一票通过 update:解决配置文件被idea格式化导致出现空格，每次重启都会清楚数据

--- a/nutzfw-web-admin/src/main/resources/custom/demo.properties
+++ b/nutzfw-web-admin/src/main/resources/custom/demo.properties
@@ -5,5 +5,5 @@
 # \u6E90 \u7801 \u5730 \u5740\uFF1Ahttps://gitee.com/threefish/NutzFw
 #
 #\u6F14\u793A\u6A21\u5F0F
-demoMode    = true
-demoModeUrl = /manage/user/update
+demoMode   =true
+demoModeUrl=/manage/user/update
