--- a/nutzfw-web-admin/src/main/resources/view/beetl.properties
+++ b/nutzfw-web-admin/src/main/resources/view/beetl.properties
@@ -1,26 +1,26 @@
 #\u9ED8\u8BA4\u914D\u7F6E
-ENGINE=org.beetl.core.engine.DefaultTemplateEngine
-HTML_TAG_SUPPORT=true
-HTML_TAG_FLAG=#
+ENGINE                    =org.beetl.core.engine.DefaultTemplateEngine
+HTML_TAG_SUPPORT          =true
+HTML_TAG_FLAG             =#
 HTML_TAG_BINDING_ATTRIBUTE=var
-NATIVE_CALL=TRUE
-TEMPLATE_CHARSET=UTF-8
-MVC_STRICT=FALSE
-NATIVE_SECUARTY_MANAGER=org.beetl.core.DefaultNativeSecurityManager
-RESOURCE_LOADER=org.beetl.core.resource.WebAppResourceLoader
+NATIVE_CALL               =TRUE
+TEMPLATE_CHARSET          =UTF-8
+MVC_STRICT                =FALSE
+NATIVE_SECUARTY_MANAGER   =org.beetl.core.DefaultNativeSecurityManager
+RESOURCE_LOADER           =org.beetl.core.resource.WebAppResourceLoader
 #\u8D44\u6E90\u914D\u7F6E\uFF0Cresource\u540E\u7684\u5C5E\u6027\u53EA\u9650\u4E8E\u7279\u5B9AResourceLoader
 #classpath \u6839\u8DEF\u5F84
-RESOURCE.root=/WEB-INF/view/
+RESOURCE.root             =/WEB-INF/view/
 #\u662F\u5426\u68C0\u6D4B\u6587\u4EF6\u53D8\u5316
-RESOURCE.autoCheck=true
+RESOURCE.autoCheck        =true
 #\u81EA\u5B9A\u4E49\u6807\u7B7E\u6587\u4EF6Root\u76EE\u5F55\u548C\u540E\u7F00
-RESOURCE.tagRoot=htmltag
-RESOURCE.tagSuffix=html
+RESOURCE.tagRoot          =htmltag
+RESOURCE.tagSuffix        =html
 # \u5185\u7F6E\u7684\u65B9\u6CD5
-FN.date=org.beetl.ext.fn.DateFunction
+FN.date                   =org.beetl.ext.fn.DateFunction
 #\u5185\u7F6E\u7684\u529F\u80FD\u5305
-FNP.strutil=org.beetl.ext.fn.StringUtil
+FNP.strutil               =org.beetl.ext.fn.StringUtil
 #\u5185\u7F6E\u7684\u9ED8\u8BA4\u683C\u5F0F\u5316\u51FD\u6570
-FTC.java.util.Date=org.beetl.ext.format.DateFormat
+FTC.java.util.Date        =org.beetl.ext.format.DateFormat
 # \u6807\u7B7E\u7C7B
-TAG.include=org.beetl.ext.tag.IncludeTag
+TAG.include               =org.beetl.ext.tag.IncludeTag
