--- a/nutzfw-web-admin/src/main/resources/custom/sys.properties
+++ b/nutzfw-web-admin/src/main/resources/custom/sys.properties
@@ -1,16 +1,16 @@
 #\u5F00\u53D1\u6A21\u5F0F
-isDev            = true
+isDev           =true
 #\u521D\u59CB\u5316\u7CFB\u7EDF
-initSystem       = false
+initSystem      =false
 #\u542F\u52A8\u65F6\u662F\u5426\u521D\u59CB\u5316\u5B9A\u65F6\u4EFB\u52A1
-initQuartzJob    = true
+initQuartzJob   =true
 #\u4EA7\u54C1\u7248\u672C
-productVersion   = 2.0
+productVersion  =2.0
 #\u7CFB\u7EDF\u9ED8\u8BA4\u5BC6\u7801
-defaultPassword  = 666666
+defaultPassword =666666
 # \u5355\u70B9\u767B\u5F55
-sso.uniqueCode   = 3HMxordRRyGdHZaSe8ZgEBLwmMps0sme3Qd
+sso.uniqueCode  =3HMxordRRyGdHZaSe8ZgEBLwmMps0sme3Qd
 # \u5355\u70B9\u767B\u5F55\u670D\u52A1\u5668\u8BF7\u6C42\u8BA4\u8BC1\u7684\u5730\u5740
-sso.validatorUrl = http://192.168.99.210:8081/demo/SSO/Validator?token={0}&uniqueCode={1}
+sso.validatorUrl=http://192.168.99.210:8081/demo/SSO/Validator?token={0}&uniqueCode={1}
 # \u5355\u70B9\u767B\u5F55\u7528\u6237\u8BA4\u8BC1\u7684\u5730\u5740
-sso.authUrl      = http://192.168.99.210:8081/demo/SSO/auth?token={0}&uniqueCode={1}
+sso.authUrl     =http://192.168.99.210:8081/demo/SSO/auth?token={0}&uniqueCode={1}
