add:配置maven，以支持mvn install命令打包 update:对登录查询可以管理的人员做出判断，使其不报错，添加debug级别友好提示

--- a/nutzfw-common/pom.xml
+++ b/nutzfw-common/pom.xml
@@ -10,7 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>nutzfw-common</artifactId>
     <version>2.0</version>
+    <name>${project.artifactId}</name>
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
