--- a/nutzfw-web-admin/src/main/resources/custom/jdbc.properties
+++ b/nutzfw-web-admin/src/main/resources/custom/jdbc.properties
@@ -1,3 +1,4 @@
+##\u6570\u636E\u5E93\u5BC6\u7801\u5982\u9700\u8981\u52A0\u5BC6\u53C2\u8003 test/src/test/java/GenMysqlPass.java
 ##\u8BFB\u5199\u5206\u79BB\uFF0C\u4E3B\u5E93\u4E3B\u5199
 db.url                       =jdbc:mysql://127.0.0.1:3306/nutzfw-open?useUnicode=true&characterEncoding=utf8&useSSL=true&autoReconnect=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
 db.username                  =root
