--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,13 @@
         <module>nutzfw-web-flowable</module>
         <module>nutzfw-web-user-front</module>
         <module>nutzfw-web-oa</module>
-<!--        <module>test</module>-->
+		<module>test</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
         <maven.compiler.encoding>UTF8</maven.compiler.encoding>
         <nutz.version>1.r.68.v20191031</nutz.version>
         <!-- beetl版本固定了不可再次升級了-->
@@ -118,6 +119,12 @@
                     <version>3.8.0</version>
                     <configuration>
                         <encoding>UTF-8</encoding>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <verbose>true</verbose>
+                        <fork>true</fork>
+<!--                        <executable>${JAVA_HOME}/bin/javac</executable>-->
+                        <compilerVersion>1.8</compilerVersion>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -126,6 +133,8 @@
                     <version>3.2.3</version>
                     <configuration>
                         <encoding>UTF-8</encoding>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
             </plugins>
