--- a/test/pom.xml
+++ b/test/pom.xml
@@ -9,10 +9,9 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>test</artifactId>
     <packaging>jar</packaging>
-    <name>test</name>
-    <url>http://maven.apache.org</url>
+    <name>${project.artifactId}</name>
     <build>
-        <finalName>test</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
