--- a/nutzfw-web-oa/pom.xml
+++ b/nutzfw-web-oa/pom.xml
@@ -6,17 +6,15 @@
         <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>nutz-web-oa</artifactId>
+    <artifactId>nutzfw-web-oa</artifactId>
     <packaging>war</packaging>
-    <name>nutz-web-oa Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>nutzfw-web-oa</name>
     <build>
-        <finalName>nutz-web-oa</finalName>
+        <finalName>nutzfw-web-oa</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
             </plugin>
             <!-- 合并多个war -->
             <plugin>
@@ -81,6 +79,10 @@
                 <exclusion>
                     <artifactId>commons-codec</artifactId>
                     <groupId>commons-codec</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
