--- a/nutzfw-common/pom.xml
+++ b/nutzfw-common/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-mock</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -166,7 +166,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-daocache</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>druid</artifactId>
@@ -190,19 +190,19 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-integration-jedis</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-websocket</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-qrcode</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>core</artifactId>
@@ -230,7 +230,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-integration-shiro</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-log4j12</artifactId>
@@ -520,14 +520,14 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-validation</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-integration-json4excel</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>poi</artifactId>
