--- a/test/pom.xml
+++ b/test/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-plugins-mock</artifactId>
-            <version>${nutz.version}</version>
+            <version>${nutz.plugins.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
