update:绑定sql查询为条件

--- a/nutzfw-web-admin/src/main/resources/custom/http_host_header_white_list.properties
+++ b/nutzfw-web-admin/src/main/resources/custom/http_host_header_white_list.properties
@@ -1,2 +1,2 @@
 #Http Host \u5934\u653B\u51FB\u62E6\u622A, \u53F7\u9694\u5F00
-http_host_header_white_list=127.0.0.1:8080,localhost:8080,192.168.99.210:8080,192.168.99.210:8081,192.168.99.194:8888
+http_host_header_white_list=127.0.0.1,localhost,localhost:8080
