--- a/nutzfw-web-admin/src/main/resources/custom/xss_sql_white_list.properties
+++ b/nutzfw-web-admin/src/main/resources/custom/xss_sql_white_list.properties
@@ -1,2 +1,2 @@
 #\u65E0\u9700\u7ECF\u8FC7XssSql\u8FC7\u6EE4\u5668\u7684API\u63A5\u53E3\u5730\u5740 , \u53F7\u9694\u5F00
-xss_sql_white_list=/sysUserDataReview/review
+xss_sql_white_list=/sysUserDataReview/review,/flowDesign/models/**/save 
